--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,16 +2,16 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/sjm-test', '.' , '-f', 'Dockerfile']
   # push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/fifi']
-  - name: "gcr.io/cloud-builders/gke-deploy"
+  - name: 'gcr.io/sjm-test/docker'
+    args: ['push', 'gcr.io/sjm-test/fifi']
+  - name: "gcr.io/sjm-test/gke-deploy"
     args:
     - run
-    - --filename=deployment.yaml
+    - --filename=pods.yaml
     - --image=gcr.io/sjm-test/sjm-test:latest
     - --location=us-central1-c
     - --cluster=cluster-1
-  - name: 'gcr.io/cloud-builders/kubectl'
+  - name: 'gcr.io/sjm-test/kubectl'
     args: ['apply', '-f', 'lb.yaml']
     env:
      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
