--- a/lb.yaml
+++ b/lb.yaml
@@ -4,8 +4,9 @@ metadata:
   name: example-service
 spec:
   selector:
-    app: example
+    type: web-server
   ports:
-    - port: 8765
+    - port: 80
       targetPort: 80
+      nodePort: 30008
   type: LoadBalancer
