--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,14 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/sjm-test/fifi:latest', '.' , '-f', 'Dockerfile']
+    args: [ 'build', '-t', 'gcr.io/sjm-test/fifi', '.' , '-f', 'Dockerfile']
   # push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker
-    args: ['push', 'gcr.io/sjm-test/fifi:latest']
+    args: ['push', 'gcr.io/sjm-test/fifi']
   - name: "gcr.io/cloud-builders/gke-deploy"
     args:
     - run
     - --filename=deployment.yaml
-    - --image=gcr.io/sjm-test/fifi:latest
+    - --image=gcr.io/sjm-test/fifi
     - --location=us-central1-c
     - --cluster=cluster-1
   - name: 'gcr.io/cloud-builders/kubectl'
