--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/sjm-test/fifi', '.' , '-f', 'Dockerfile']
   # push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker
+  - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/sjm-test/fifi']
   - name: "gcr.io/cloud-builders/gke-deploy"
     args:
