--- a/onlyyamls/lb.yaml
+++ b/onlyyamls/lb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: example-service
+  name: lb-nginx-server
 spec:
   selector:
     type: web-server
